manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          resources:
            limits:
                memory: "512Mi"  # Adjust as needed
                cpu: "500m"      # Adjust as needed
            requests:
              memory: "256Mi"  # Adjust as needed
              cpu: "250m"      # Adjust as needed
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
